날씨 일기 프로젝트

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/project?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=root
+### jpa가 날린 쿼리문을 콘솔에 띄우는 옵션
+spring.jpa.show-sql=true
+### jpa를 mysql을 사용할 것이라는 옵션
+spring.jpa.database=mysql
+openweathermap.key=c2a9564cbe6f7dd5ad37c672167d4c35
+logging.config=classpath:logback-spring.xml
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
